# Ecommerce-Analyst

./: .env  .gitignore  Lambda_Guide.ipynb  Makefile  README.md  docker-compose.yml  extract.py  notification.json  powerbi_data.duckdb  pyproject.toml  setup_pbi.py  test_file.txt  test_requests.py
infra/init_scripts/: deploy_lambda.sh  iam_role.sh  s3_init.sh
localstack/: full_deploy.sh  iam.sh  init_eventbridge.sh  init_lambda.sh  init_s3.sh  inti_function_lambda.sh
localstack-data/cache/: machine.json
scripts/: extract.py  load_to_s3.py
src/functions/function_analys/: handler.py  requirements.txt
src/functions/interaction_trans/: handler.py
src/functions/interactions_trans/: handler.py
src/functions/products_trans/: handler.py
src/functions/purchases_trans/: handler.py
src/functions/reviews_trans/: handler.py
src/functions/sessions_trans/: handler.py  requirements.txt
src/functions/transform/: handler.py
src/functions/up_load/: handler.py
src/functions/users_trans/: handler.py
src/lambda_functions/process_data/: app.py
src/scraper/: config.py  extract.py
