[project]
name = "project-aws"
version = "0.1.0"
description = "AWS Lambda & S3 data pipeline for job extraction"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "awscli>=1.45.24",
    "awscli-local>=0.22.2",
    "boto3>=1.34.0",
    "cloudscraper>=1.2.71",
    "curl-cffi>=0.15.0",
    "httpx[http2]>=0.28.1",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
    "selenium>=4.44.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.3.0",
    "pytest>=8.0.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I"] # PEP8 errors, Pyflakes, isort
ignore = []
